Cleanup the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,12 @@
 <footer class="text-muted">
   <div class="container">
-    <p class="float-right">
+    <p class="text-right">
       <a href="#">Back to top</a>
     </p>
-    <p><a href="">Our Company Hub</a> built with &lt;3 by <a href="">@lightster</a></p>
+    <p>
+      <a href="https://github.com/lightster/our-company-hub">Our Company Hub</a>
+      built with &lt;3 by
+      <a href="https://twitter.com/lightster">@lightster</a>
+    </p>
   </div>
 </footer>
