Make resource cards white

--- a/assets/main.css
+++ b/assets/main.css
@@ -82,6 +82,10 @@ body {
   }
 }
 
+.hub .resources .card {
+  background-color: #ffffff;
+}
+
 .hub .resources .card-header {
   background-color: #333333;
   color: #eeeeee;
