Only set minimum height for single column displays
On an iPad mini, two columns can fit side-by-side, so
we want the card height to be consistent

--- a/assets/main.css
+++ b/assets/main.css
@@ -79,8 +79,8 @@ body {
   background-color: #f7f7f7;
 }
 
-@media (min-width: 992px) {
-  .hub .resources .col-lg-3 .card {
+@media (min-width: 576px) {
+  .hub .resources .card {
     min-height: 18.5rem;
   }
 }
