--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,24 +2,39 @@
 layout: default
 ---
 
-<div class="home">
+{% include organization.html %}
 
-  <h1 class="page-heading">Posts</h1>
-  
-  {{ content }}
+{% include resource_cards.html class="upcoming-events" title="Upcoming Events" cards=site.upcoming_events %}
+{% include resource_cards.html class="personal-resources" title="Personal Resources" cards=site.personal_resources %}
+{% include resource_cards.html class="work-resources" title="Work Resources" cards=site.work_resources %}
 
-  <ul class="post-list">
-    {% for post in site.posts %}
-      <li>
-        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+{% if site.social_cards != nil %}
+  <div class="cards resources social-resources">
+    <div class="section-title">Social Media</div>
+    <div class="container">
+      <div class="row">
 
-        <h2>
-          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        </h2>
-      </li>
-    {% endfor %}
-  </ul>
+        {% for card in site.social_cards %}
+          {% capture file %}social_{{ card.network }}.html{% endcapture %}
+          {% include {{ file }} username=card.username inverted=card.inverted personal=card.personal %}
+        {% endfor %}
 
-  <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
+      </div>
+    </div>
+  </div>
+{% endif %}
 
-</div>
+{{ content }}
+
+<footer class="text-muted">
+  <div class="container">
+    <p class="text-right">
+      <a href="#">Back to top</a>
+    </p>
+    <p>
+      <a href="https://github.com/lightster/our-company-hub">Our Company Hub</a>
+      built with &lt;3 by
+      <a href="https://twitter.com/lightster">@lightster</a>
+    </p>
+  </div>
+</footer>
