--- a/_includes/resource_icon_card.html
+++ b/_includes/resource_icon_card.html
@@ -6,7 +6,7 @@
   {% assign fg_color=include.fg_color %}
 {% endif %}
 
-<div class="col-sm-6 col-lg-3">
+<div class="{{ include.width_class | default: 'col-sm-6 col-lg-3' }}">
   {% if include.link != "" and include.link != nil %}
   <a href="{{ include.link }}" class="card">
   {% elsif include.relative_link != "" and include.relative_link != nil %}
