--- a/assets/main.css
+++ b/assets/main.css
@@ -5,6 +5,33 @@ body {
 /*font-family: 'Open Sans', sans-serif;*/
 }
 
+body.cover {
+  background-color: #333;
+  color: #fff;
+}
+
+.cover .hub {
+  position: absolute;
+
+  width: 500px;
+  height: 300px;
+
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  margin: auto;
+}
+
+.cover h1 {
+  font-size: 10rem;
+}
+
+.cover .lead .btn {
+  width: 500px;
+}
+
 .hub .jumbotron {
   padding-top: 5rem;
   padding-bottom: 5rem;
