--- a/_layouts/card-details.html
+++ b/_layouts/card-details.html
@@ -4,12 +4,12 @@ layout: default
 
 <nav class="navbar flex-row navbar-toggleable-md navbar-light bg-faded">
   <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="{{ site.baseurl }}/">Hub Home</a>
+    <li class="nav-item hub-brand">
+      <a class="nav-link" href="{{ site.baseurl }}/">Hub</a>
     </li>
   </ul>
 
-  <a class="navbar-brand" href="{{ site.organization_url | default: site.baseurl }}">{{ site.organization_brand | default: site.organization_name }}</a>
+  <a class="navbar-brand" href="{{ site.organization_url | default: site.baseurl }}">{{ site.organization_brand_header | default: site.organization_name }}</a>
 </nav>
 
 <div class="text-center" style="margin-bottom: 2rem; padding-top: 3rem; padding-bottom: 3rem; background-color: {{ page.bg_color | default: '#000000' }}; ">
