--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,15 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
-  </header>
+<nav class="navbar flex-row navbar-toggleable-md navbar-light bg-faded">
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item hub-brand">
+      <a class="nav-link" href="{{ site.baseurl }}/">Hub</a>
+    </li>
+  </ul>
 
-  <div class="post-content">
-    {{ content }}
-  </div>
+  <a class="navbar-brand" href="{{ site.organization_url | default: site.baseurl }}">{{ site.organization_brand_header | default: site.organization_name }}</a>
+</nav>
 
-</article>
+{{ content }}
