Cleanup baseurl sometimes missing trailing '/'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
+  {% assign baseurl = site.baseurl | append: '/' %}
+
   {% include head.html %}
 
   <body class="{{ page.page_class }}">
