Fix issue with links back to home page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+{% assign baseurl = site.baseurl | append: '/' %}
+
 <nav class="navbar flex-row navbar-toggleable-md navbar-light bg-faded">
   <ul class="navbar-nav mr-auto">
     <li class="nav-item hub-brand">
