Rename all collections to use '-' instead of '_'

--- a/_includes/organization.html
+++ b/_includes/organization.html
@@ -17,6 +17,6 @@
   </div>
 </section>
 
-{% include org_cards.html class="core-values" title="Our Core Values" cards=site.core_values %}
+{% include org_cards.html class="core-values" title="Our Core Values" cards=site.core-values %}
 
-{% include org_cards.html class="strategic-goals" title="Our Strategic Goals" cards=site.strategic_goals %}
+{% include org_cards.html class="strategic-goals" title="Our Strategic Goals" cards=site.strategic-goals %}
