Add dates to upcoming events cards

--- a/_includes/resource_cards.html
+++ b/_includes/resource_cards.html
@@ -11,16 +11,12 @@
             {% assign relative_link = card.url %}
           {% endif %}
 
-          {% include resource_icon_card.html
-              link=card.link
-              relative_link=relative_link
-              icon=card.icon
-              bg_color=card.bg_color
-              fg_color=card.fg_color
-              title=card.title
-              description=card.description
-              resource=card
-          %}
+          {% assign include_file = "resource_icon_card.html" %}
+          {% if card.layout == 'event-details' %}
+            {% assign include_file = "resource_icon_card_event.html" %}
+          {% endif %}
+
+          {% include {{ include_file }} link=card.link relative_link=relative_link icon=card.icon bg_color=card.bg_color fg_color=card.fg_color title=card.title description=card.description resource=card %}
         {% endif %}
 
       {% endfor %}
