--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,7 +32,7 @@ layout: page
       <a href="#">Back to top</a>
     </p>
     <p>
-      <a href="https://github.com/lightster/our-company-hub">Our Company Hub</a>
+      <a href="https://github.com/lightster/our-company-hub">Hub</a>
       built with &lt;3 by
       <a href="https://twitter.com/lightster">@lightster</a>
     </p>
