--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="hub {{ page.page_class }}">
+  <body class="hub hub-{{ page.page_class | default: page.layout }}">
 
     {% include header.html %}
 
