--- a/_layouts/card-details.html
+++ b/_layouts/card-details.html
@@ -2,21 +2,28 @@
 layout: page
 ---
 
-<div class="text-center" style="margin-bottom: 2rem; padding-top: 3rem; padding-bottom: 3rem; background-color: {{ page.bg_color | default: '#000000' }}; ">
-  <i class="fa fa-{{ page.icon }}"
-    style="
-      background-color: inherit;
-      color: {{ page.fg_color | default: '#ffffff' }};
-      font-size: 15rem;
-    "
-  ></i>
-</div>
+<div class="card-details">
+  <div class="card-details-header" style="background-color: {{ page.bg_color | default: '#000000' }}; ">
+    <i class="fa fa-{{ page.icon }}"
+      style="
+        background-color: inherit;
+        color: {{ page.fg_color | default: '#ffffff' }};
+      "
+    ></i>
+  </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <h1>{{ page.title }}</h1>
-      {{ content | strip | default: page.description }}
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <h1>{{ page.title }}</h1>
+
+        {% if page.subcards %}
+          {% include resource_cards.html cards=page.subcards %}
+          {{ content }}
+        {% else %}
+          {{ content | strip | default: page.description }}
+        {% endif %}
+      </div>
     </div>
   </div>
 </div>
