--- a/assets/main.css
+++ b/assets/main.css
@@ -77,7 +77,7 @@ body.hub-cover {
   background-color: #f7f7f7;
 }
 
-.hub .cards {
+.hub.hub-home .cards {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
@@ -108,7 +108,7 @@ body.hub-cover {
   border: 0;
 }
 
-.hub .card a {
+.hub .card .card-title a, .hub .card > a {
   color: inherit;
   text-decoration: none;
 }
@@ -129,6 +129,20 @@ body.hub-cover {
   width: 90%;
 }
 
+.hub.hub-card-details .card {
+  flex: 1 0 auto;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+@media (min-width: 576px) {
+  .hub.hub-card-details .card {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+  }
+}
+
 @media (min-width: 768px) {
   .hub .card {
     margin-left: 1%;
@@ -142,6 +156,12 @@ body.hub-cover {
     margin-left: 1%;
     margin-right: 1%;
     width: 31%;
+  }
+
+  .hub.hub-card-details .card {
+    margin-left: 1%;
+    margin-right: 1%;
+    width: 48%;
   }
 }
 
@@ -170,4 +190,20 @@ body.hub-cover {
   background-color: #e7e7e7;
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.hub .card-details .cards > .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.hub .card-details-header {
+  margin-bottom: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  text-align: center;
+}
+
+.hub .card-details-header i.fa {
+  font-size: 14rem;
 }
