Convert event details from list to hash

--- a/_includes/resource_icon_card_event.html
+++ b/_includes/resource_icon_card_event.html
@@ -2,27 +2,23 @@
   {% assign event_details = include.resource.event_details %}
 
   {% if event_details != '' and event_details != nil %}
-    <!-- <p class="card-text"> -->
-        {% for event in event_details %}
-          <b>{{ event.location }}</b>
-          <span class="float-right">
-          {% if event.start_date != '' and event.start_date != nil %}
-            <time datetime="{{ event.start_date | date: '%FT%T%:z' }}" class="start-date">
-              {{ event.start_date | date: '%b %d' }}
-            </time>
-          {% endif %}
-            {% if event.end_date != '' and event.end_date != nil %}
-              {% if event.start_date != '' and event.start_date != nil %}
-              &ndash;
-              {% endif %}
-              <time datetime="{{ event.end_date | date: '%FT%T%:z' }}" class="end-date">
-                {{ event.end_date | date: '%b %d' }}
-              </time>
-            {% endif %}
-          </span>
-          <br />
-        {% endfor %}
-    <!-- </p> -->
+    <b>{{ event_details.location }}</b>
+    <span class="float-right">
+      {% if event_details.start_date != '' and event_details.start_date != nil %}
+        <time datetime="{{ event_details.start_date | date: '%FT%T%:z' }}" class="start-date">
+          {{ event_details.start_date | date: '%b %d' }}
+        </time>
+      {% endif %}
+      {% if event_details.end_date != '' and event_details.end_date != nil %}
+        {% if event_details.start_date != '' and event_details.start_date != nil %}
+        &ndash;
+        {% endif %}
+        <time datetime="{{ event_details.end_date | date: '%FT%T%:z' }}" class="end-date">
+          {{ event_details.end_date | date: '%b %d' }}
+        </time>
+      {% endif %}
+    </span>
+    <br />
   {% endif %}
 {% endcapture %}
 
