--- a/_layouts/card-details.html
+++ b/_layouts/card-details.html
@@ -14,7 +14,7 @@ layout: page
 
   <div class="container">
     <div class="row">
-      <div class="col-md-8 offset-md-2">
+      <div class="col-lg-8 offset-lg-2">
         <h1>{{ page.title }}</h1>
 
         {% assign event_details = page.event_details %}
