--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Didact+Gothic|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/assets/font-awesome/css/font-awesome.min.css" | relative_url }}">
 
-  {% if jekyll.environment == 'production' and site.google_analytics %}
+  {% if jekyll.environment == 'prod' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
 </head>
