--- a/_includes/resource_icon_card_event.html
+++ b/_includes/resource_icon_card_event.html
@@ -2,7 +2,7 @@
   {% assign event_details = include.resource.event_details %}
 
   {% if event_details != '' and event_details != nil %}
-    <b>{{ event_details.location }}</b>
+    <b>{{ event_details.city_state }}</b>
     <span class="float-right">
       {% if event_details.start_date != '' and event_details.start_date != nil %}
         <time datetime="{{ event_details.start_date | date: '%FT%T%:z' }}" class="start-date">
