--- a/_includes/resource_cards.html
+++ b/_includes/resource_cards.html
@@ -1,27 +1,29 @@
-<div class="cards resources {{ include.class }}">
-  {% if include.title %}
-    <div class="section-title">{{ include.title }}</div>
-  {% endif %}
+{% assign cards = include.cards | sort: 'sort_order' %}
+{% if cards.size > 0 %}
+  <div class="cards resources {{ include.class }}">
+    {% if include.title %}
+      <div class="section-title">{{ include.title }}</div>
+    {% endif %}
 
-  <div class="container">
-    <div class="row">
-      {% assign cards = include.cards | sort: 'sort_order' %}
-      {% for card in cards %}
-        {% if card.title != "" and card.title != nil %}
-          {% assign relative_link = card.relative_link %}
-          {% if card.layout != '' and card.layout != nil and (relative_link == '' or relative_link == nil) %}
-            {% assign relative_link = card.url %}
+    <div class="container">
+      <div class="row">
+        {% for card in cards %}
+          {% if card.title != "" and card.title != nil %}
+            {% assign relative_link = card.relative_link %}
+            {% if card.layout != '' and card.layout != nil and (relative_link == '' or relative_link == nil) %}
+              {% assign relative_link = card.url %}
+            {% endif %}
+
+            {% assign include_file = "resource_icon_card.html" %}
+            {% if card.layout == 'event-details' %}
+              {% assign include_file = "resource_icon_card_event.html" %}
+            {% endif %}
+
+            {% include {{ include_file }} link=card.link relative_link=relative_link icon=card.icon bg_color=card.bg_color fg_color=card.fg_color title=card.title description=card.description resource=card %}
           {% endif %}
 
-          {% assign include_file = "resource_icon_card.html" %}
-          {% if card.layout == 'event-details' %}
-            {% assign include_file = "resource_icon_card_event.html" %}
-          {% endif %}
-
-          {% include {{ include_file }} link=card.link relative_link=relative_link icon=card.icon bg_color=card.bg_color fg_color=card.fg_color title=card.title description=card.description resource=card %}
-        {% endif %}
-
-      {% endfor %}
+        {% endfor %}
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
