--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/font-awesome/css/font-awesome.min.css" | relative_url }}">
 
-  {% if jekyll.environment == 'prod' and site.google_analytics %}
+  {% assign environment = jekyll.environment | replace: 'production', 'prod' %}
+  {% if environment == "prod" and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
 </head>
