Display "Our" in front of "Mission" if no org name
If no organization name is set in _config.yml, display "Our" in front
of the "Mission" title (i.e. "Our Mission")

--- a/_includes/organization.html
+++ b/_includes/organization.html
@@ -4,7 +4,7 @@
       {{ site.mission_statement }}
     </h1>
 
-    <div class="section-title text-muted">{{ site.organization_name }} Mission</div>
+    <div class="section-title text-muted">{{ site.organization_name | default: "Our" }} Mission</div>
   </div>
 </section>
 
