Add usable anchors to all relevant headers

--- a/_includes/org_cards.html
+++ b/_includes/org_cards.html
@@ -1,6 +1,6 @@
 {% if include.cards.size > 0 %}
-  <div class="cards {{ include.class }}">
-    <div class="section-title">{{ include.title }}</div>
+  <div class="cards {{ include.id }}" id="{{ include.id }}">
+    <h3 class="anchorable">{{ include.title }}</h3>
 
     <div class="container">
       <div class="row">
