--- a/_layouts/card-details.html
+++ b/_layouts/card-details.html
@@ -17,7 +17,7 @@ layout: page
       <div class="col-lg-8 offset-lg-2">
         {% if page.header_title == "" %}
         {% else %}
-          <h1>{{ page.header_title | default: page.title }}</h1>
+          <h1 id="content">{{ page.header_title | default: page.title }}</h1>
         {% endif %}
 
         {% assign event_details = page.event_details %}
