--- a/_includes/resource_cards.html
+++ b/_includes/resource_cards.html
@@ -9,8 +9,10 @@
       <div class="row">
         {% for card in cards %}
           {% if card.title != "" and card.title != nil %}
-            {% assign relative_link = card.relative_link %}
-            {% if card.layout != '' and card.layout != nil and (relative_link == '' or relative_link == nil) %}
+            {% assign relative_link = card.relative_link | default: '' %}
+            {% assign page_content = card.content | strip %}
+            {% assign has_content = page_content != '' or card.subcards.length > 0 %}
+            {% if card.layout != '' and card.layout != nil and relative_link == '' and has_content %}
               {% assign relative_link = card.url %}
             {% endif %}
 
