--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <script src="{{ "/assets/main.js" | relative_url }}"></script>
 
+    <!-- build date/time: {{ site.time | date_to_xmlschema }} -->
+    <!-- build revision: {{ site.github.build_revision }} -->
+
   </body>
 
 </html>
