Navigate to the source section when going home
If the user clicked "Expenses" in "Personal Resources", return the
user back to "Personal Resources" when clicking the Hub logo

--- a/_includes/org_cards.html
+++ b/_includes/org_cards.html
@@ -16,5 +16,7 @@
 
       </div>
     </div>
+
+    <a href="#" class="return-to-top"><i class="fa fa-arrow-circle-up"></i></a>
   </div>
 {% endif %}
