--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,9 @@ layout: page
 
 {% include organization.html %}
 
-{% include resource_cards.html id="upcoming-events" title="Upcoming Events" cards=site.upcoming-events %}
-{% include resource_cards.html id="personal-resources" title="Personal Resources" cards=site.personal-resources %}
-{% include resource_cards.html id="work-resources" title="Work Resources" cards=site.work-resources %}
+{% include resource_cards.html id="upcoming-events" title="Upcoming Events" %}
+{% include resource_cards.html id="personal-resources" title="Personal Resources" %}
+{% include resource_cards.html id="work-resources" title="Work Resources" %}
 
 {% if site.social_cards != nil %}
   <div class="cards resources social-resources" id="social-media">
