--- a/assets/main.css
+++ b/assets/main.css
@@ -156,6 +156,23 @@ body.hub-cover {
   margin-bottom: 1rem;
 }
 
+.hub .cards .return-to-top {
+   font-size: 1.5rem;
+   color: #666666;
+   position: absolute;
+   right: 0;
+   margin-right: 1.5rem;
+   margin-bottom: 1rem;
+}
+
+.hub .cards .return-to-top i {
+   visibility: hidden;
+}
+
+.hub .cards:hover .return-to-top i {
+  visibility: visible;
+}
+
 
 .hub .jumbotron.mission {
   background-color: #fff;
@@ -271,8 +288,6 @@ body.hub-cover {
 
 .hub .cards.work-resources {
   background-color: #e7e7e7;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
 }
 
 .hub .card-details .cards > .container {
